feat: update landing page response and mapping for event, ormawa, and faq